--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,472 @@
-.App {
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
+body {
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: #747474;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  font-family: "Roboto", sans-serif;
+  background-color: ffff;
+  line-height: 1.8;
+  text-decoration: none !important;
+}
+
+/* nav bar flex container */
+.nav-flex-container {
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  height: 70px;
+  width: 100%;
+  background-color: white;
+  box-shadow: 0 3px 2px -2px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.nav-flex-container a:hover {
+  color: #00b39b;
+}
+
+.flex-item {
+  justify-content: flex-end;
+  justify-items: flex-end;
+}
+
+.nav-flex-container a {
+  color: #ababab;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.is-current {
+  color: #00b39b !important;
+}
+
+li {
+  list-style: none;
+  flex: 3;
+}
+
+.nav-flex-container > :nth-child(1) {
+  display: ri;
+}
+
+.docplanner-nav-logo {
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 129px;
+  justify-content: center;
+  width: "250";
+  height: "250";
+}
+
+.main-nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex: 2;
+  margin: 10px;
+}
+/* image under nav */
+
+.logo-under-nav {
+  display: flex;
+  justify-content: center;
+}
+
+div.logo-under-nav {
+  width: 100%;
+}
+
+/* the main h1 */
+.main-h1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 1em 0;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.3px;
+  font-size: 2.125rem;
+  color: #00b39b;
+}
+
+/* first two paragraphs  */
+.first-two-paragraphs {
+  display: flex;
+  justify-content: center;
+  justify-content: space-between;
+  width: 80%;
+
+  margin-top: 0px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-left: 133px;
+}
+
+.paragraph-1 {
+  width: 50%;
+  text-align: left;
+  margin: 20px;
+  margin-top: 2px;
+}
+.paragraph-2 {
+  width: 50%;
+  text-align: left;
+  width: 50%;
+}
+
+/* first two boxes for Patients and for Doctors */
+.first-two-boxes {
+  display: flex;
+  overflow: auto;
+  justify-content: center;
+  justify-content: space-between;
+  width: 80%;
+
+  margin-top: 0px;
+  margin-right: 20px;
+  margin-bottom: 46px;
+  margin-left: 133px;
+}
+
+.box-for-patients {
+  width: 50%;
+  width: 50%;
+  background-color: #00ccb1;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 15px;
+  overflow: hidden;
+}
+
+.box-for-doctors {
+  width: 50%;
+  background-color: #3c83df;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 15px;
+  overflow: hidden;
+}
+
+/* h1 and h2 for Patients and for Doctors */
+.box-for-doctors > h2,
+.box-for-patients > h2 {
+  color: #bbefe8;
+  font-size: 15px;
+}
+
+.box-for-doctors > h1,
+.box-for-patients > h1 {
+  color: white;
+  font-size: 25px;
+  font-weight: 300;
+  width: 100%;
+}
+
+/* images for Patients and for Doctors */
+
+.patients-doctors-images {
+  width: 80%;
+  height: 70%;
+  margin-left: 40%;
+  margin-top: -2.3em;
+  margin-bottom: -22px;
+  overflow: auto;
+}
+
+.doctors {
+  margin-bottom: -22px;
+}
+/* drop down menu under  Patients */
+
+.dropbtn {
+  background-color: white;
+  color: #333333;
+  padding: 30px;
+  font-size: 16px;
+  border: none;
+  border-radius: 7px;
+  height: 40px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  padding: 50px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropbtn {
+  background-color: #fcf6f5ff;
+}
+
+/* brands section */
+.sections-brand {
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 80%;
+  margin-top: 0px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-left: 133px;
+}
+
+section ul {
+  display: flex;
+  flex-flow: wrap;
+  justify-items: left;
+  justify-content: left;
+  width: 59%;
+  margin-top: 0px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  fill: #c4c4c4;
+}
+
+section h2 {
+  display: flex;
+  justify-items: left;
+  justify-content: left;
+  width: 25%;
+  margin-left: 20px;
+  color: #00b39b;
+  font-weight: initial;
+}
+.brands-imgaes svg {
+  fill: gray;
+}
+
+.brands-imgaes svg:hover {
+  fill: #00b39b;
+}
+
+/*  stats section */
+.stats-section {
+  display: flex;
+  background-color: #d9f6f6;
+  background-image: url(/img/doclogo.png);
+  background-repeat: no-repeat;
+  background-position: left;
+  margin-top: 50px;
+  background-size: 400px 400px;
+  background-position: 100px 249px;
+}
+.stats-letf h1 {
+  font-size: 2.125rem;
+  color: #00b39b;
+  font-weight: initial;
+  letter-spacing: 0.3px;
+}
+
+.stats-letf {
+  display: flex;
+  flex-direction: column;
+  justify-items: left;
+  justify-content: left;
+  width: 50%;
+  margin-left: 84px;
+  margin-top: 55px;
+}
+.stats-letf p {
+  justify-items: left;
+  justify-content: left;
+  margin-left: 0px;
+  font-size: 1em;
+}
+
+.stats-right {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+  justify-items: center;
+  justify-content: center;
+  width: 60%;
+}
+
+.small-box-item {
+  display: flex;
+  flex: 1;
+  flex-wrap: wrap;
+
+  width: 50%;
+  border-radius: 5px;
+  box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.05);
+  height: 200;
   text-align: center;
+  padding: 50px;
+  font-size: 0.8125em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.box-1,
+.box-2,
+.box-3,
+.box-4 {
+  padding: 22px;
+
+  margin: 8px;
+
+  background-color: white;
+  height: 200px;
+  width: 40%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.box-2,
+.box-4 {
+  margin-top: -14px;
 }
+.small-box-item h3 {
+  color: #00b39b;
+  font-weight: 300;
+  letter-spacing: 0.2px;
+}
+/*  offices section */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* .offices-section {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  width: 80%;
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-left: 133px;
+  background-color: white;
+} */
+
+.offices-section h1 {
+  align-items: center;
+  justify-content: center;
+  margin: 15px;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.3px;
+  font-size: 1.5em;
+  color: #00b39b;
 }
 
-.App-link {
-  color: #61dafb;
+.offices-section p {
+  font-size: 0.8125em;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+  margin-bottom: 70px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.office-gallery {
+  margin-top: 20px;
+  margin-right: 20px;
+  margin-bottom: 100px;
+  margin-left: 20px;
+}
+.office-gallery img {
+  width: 309px;
+  height: 278px;
+  margin: 10px;
+  border-radius: 7px;
+}
+.office-List {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0% 10%;
+}
+.office-gallery :hover {
+  -moz-box-shadow: inset 0 0 10px grey;
+  -webkit-box-shadow: inset 0 0 10px grey;
+  box-shadow: inset 0 0 10px grey;
+}
+.gallery-caption {
+  color: #747474;
+  align-items: flex-start;
+  font-size: 1.125em;
+  font-weight: 400;
+  line-height: 1.6666666667;
+  padding: 1.1111111111em;
+}
+.gallery-caption a {
+  text-decoration: none !important;
+  color: red;
+}
+
+.gallery-button {
+  display: inline-block;
+  vertical-align: middle;
+  position: relative;
+  outline: 0;
+  border: 0;
+  border-radius: 4px;
+  padding: 1.1666666667em 1.5em;
+  background: #3d83df;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  line-height: 1em;
+  color: #fff;
+  font-weight: 700;
+  letter-spacing: 0.04em;
+  font-size: 0.75rem;
+  text-align: center;
+  text-decoration: none !important;
+  text-transform: uppercase;
+  transition: all 0.2s ease 0s;
+  margin-left: 49px;
+}
+
+/* footer */
+.main-footer {
+  border-top: 1px solid #eef2f2;
+  margin-top: 40px;
+  font-size: 0.75em;
+  color: #ababab;
+  text-align: center;
+}
+
+.middle-main-footer {
+  width: 80%;
+  margin-top: 15px;
+  margin-right: 20px;
+  margin-bottom: 0px;
+  margin-left: 133px;
+}
+.middle-main-footer a {
+  color: #3d83df;
+  text-decoration: none;
 }
